fix: jowkee text type corrected

--- a/index.html
+++ b/index.html
@@ -41,108 +41,107 @@
             <section id="projects" class="py-20 grid grid-columns-1">
                 <div id="knowkee-project" class="glass glass-padding">
                     <h3 class="text-xl font-bold mb-2">Knowkee (mobile app)</h3>
-                    <h4 class="text-gray-300">
+                    <p class="text-gray-300">
                         A digital wallet for you to store and share your life achievements, available on the Play Store
                         and
                         App Store
-                        <h4>
-                            <div class="dropdown inline-block mt-4">
-                                <div id="knowkee-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
-                                    <p class="pb-5"><strong>My Role</strong> <br>Backend. I collaborated in the
-                                        creation, from scratch, of this
-                                        application available on the Play Store and App Store. <br>Throughout the entire
-                                        development
-                                        lifecycle of the application, I participated mainlly in the backend development,
-                                        and
-                                        in an integration of a third party's APK with our mobile app code. <br>
-                                        <br>
-                                        <strong>The Tech Stack</strong> <br>In this modern tech stack, Python served as the
-                                        backend
-                                        language, orchestrating the interaction between various services. DocumentDB and
-                                        DynamoDB
-                                        were employed as NoSQL databases, offering flexible data storage. The system's
-                                        gateway to
-                                        the outside world was managed by Amazon API Gateway, which seamlessly connected
-                                        with
-                                        AWS
-                                        Lambda, facilitating serverless compute functionality. Email communication was
-                                        streamlined
-                                        through AWS Simple Email Service (SES), while Simple Notification Service (SNS)
-                                        handled
-                                        messaging. User authentication and management were delegated to Amazon Cognito.
-                                        REST
-                                        and
-                                        HTTP APIs enabled smooth communication between components. The React Native app,
-                                        coded in
-                                        Typescript, served as the dynamic and responsive frontend. Version control was
-                                        managed using
-                                        CodeCommit/git, while AWS SAM and CloudFormation simplified serverless
-                                        application
-                                        deployment. JSON Web Tokens (JWT) secured communication, and third-party APIs
-                                        expanded the
-                                        system's capabilities, creating a robust, scalable, and versatile technological
-                                        ecosystem.<br>
-                                        <br>
-                                        <strong>The team</strong><br> For this project the team was conformed by 2 backend
-                                        developers,
-                                        2 frontend developers, a lead developer, and a product owner (CTO). As well as
-                                        the
-                                        support
-                                        from an international business partner's team in the use of their API. <br>
-                                        <br>
-                                        <strong>The Problem</strong><br> The challenge in developing this mobile app lies
-                                        in
-                                        designing and implementing a
-                                        functional digital wallet system. This system should enable users to securely
-                                        store
-                                        and share various life achievements, encompassing educational certificates, work
-                                        history, recommendations, and badges. The primary objective is to create a
-                                        robust
-                                        and user-friendly mobile application that effectively manages and facilitates
-                                        the
-                                        sharing of diverse personal accomplishments within a secure digital
-                                        environment.<br>
-                                        <br>
-                                        <strong>The Solution </strong><br>
-                                        To address the specified problem, as it pertains to th backend, a comprehensive
-                                        solution was implemented, centered
-                                        around a REST API designed to manage the creation, reception, storage, and
-                                        retrieval
-                                        of credentials. These credentials were verified by a third-party Internet of
-                                        Credentials provider. The primary databases employed in this solution were NoSQL
-                                        databases, chosen for their flexibility and scalability, as well as for the
-                                        compatibility with the ceredentials data format.
+                    </p>
+                    <div class="dropdown inline-block mt-4">
+                        <div id="knowkee-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
+                            <p class="pb-5"><strong>My Role</strong> <br>Backend. I collaborated in the
+                                creation, from scratch, of this
+                                application available on the Play Store and App Store. <br>Throughout the entire
+                                development
+                                lifecycle of the application, I participated mainlly in the backend development,
+                                and
+                                in an integration of a third party's APK with our mobile app code. <br>
+                                <br>
+                                <strong>The Tech Stack</strong> <br>In this modern tech stack, Python served as the
+                                backend
+                                language, orchestrating the interaction between various services. DocumentDB and
+                                DynamoDB
+                                were employed as NoSQL databases, offering flexible data storage. The system's
+                                gateway to
+                                the outside world was managed by Amazon API Gateway, which seamlessly connected
+                                with
+                                AWS
+                                Lambda, facilitating serverless compute functionality. Email communication was
+                                streamlined
+                                through AWS Simple Email Service (SES), while Simple Notification Service (SNS)
+                                handled
+                                messaging. User authentication and management were delegated to Amazon Cognito.
+                                REST
+                                and
+                                HTTP APIs enabled smooth communication between components. The React Native app,
+                                coded in
+                                Typescript, served as the dynamic and responsive frontend. Version control was
+                                managed using
+                                CodeCommit/git, while AWS SAM and CloudFormation simplified serverless
+                                application
+                                deployment. JSON Web Tokens (JWT) secured communication, and third-party APIs
+                                expanded the
+                                system's capabilities, creating a robust, scalable, and versatile technological
+                                ecosystem.<br>
+                                <br>
+                                <strong>The team</strong><br> For this project the team was conformed by 2 backend
+                                developers,
+                                2 frontend developers, a lead developer, and a product owner (CTO). As well as
+                                the
+                                support
+                                from an international business partner's team in the use of their API. <br>
+                                <br>
+                                <strong>The Problem</strong><br> The challenge in developing this mobile app lies
+                                in
+                                designing and implementing a
+                                functional digital wallet system. This system should enable users to securely
+                                store
+                                and share various life achievements, encompassing educational certificates, work
+                                history, recommendations, and badges. The primary objective is to create a
+                                robust
+                                and user-friendly mobile application that effectively manages and facilitates
+                                the
+                                sharing of diverse personal accomplishments within a secure digital
+                                environment.<br>
+                                <br>
+                                <strong>The Solution </strong><br>
+                                To address the specified problem, as it pertains to th backend, a comprehensive
+                                solution was implemented, centered
+                                around a REST API designed to manage the creation, reception, storage, and
+                                retrieval
+                                of credentials. These credentials were verified by a third-party Internet of
+                                Credentials provider. The primary databases employed in this solution were NoSQL
+                                databases, chosen for their flexibility and scalability, as well as for the
+                                compatibility with the ceredentials data format.
 
-                                        Proper encryption measures were implemented both at rest and in transit to
-                                        ensure
-                                        the security of sensitive data. The handling, transformation, and presentation
-                                        of
-                                        various credential types were standardized using the JSON format, providing a
-                                        structured and interoperable data format.
+                                Proper encryption measures were implemented both at rest and in transit to
+                                ensure
+                                the security of sensitive data. The handling, transformation, and presentation
+                                of
+                                various credential types were standardized using the JSON format, providing a
+                                structured and interoperable data format.
 
-                                        For user interactions, a secure user authentication and authorization system was
-                                        established, safeguarding access to the stored credentials. This included robust
-                                        mechanisms to verify the identity of users and control their access privileges.
+                                For user interactions, a secure user authentication and authorization system was
+                                established, safeguarding access to the stored credentials. This included robust
+                                mechanisms to verify the identity of users and control their access privileges.
 
-                                        The mobile application seamlessly interacted with the REST API, utilizing it as
-                                        a
-                                        backend service to retrieve and display user information. This approach ensured
-                                        a
-                                        smooth and secure user experience, allowing individuals to manage and share
-                                        their
-                                        life achievements with confidence in the integrity and privacy of their
-                                        credentials.
-                                        <br>
-                                        <br>
-                                    </p>
-                                </div>
-                                <a href="#knowkee-project">
-                                    <button id="knowkeeId" onclick="toggleDropdown('knowkee')"
-                                        class="cami-btn">
-                                        Show Details
-                                    </button>
-                                </a>
-                            </div>
+                                The mobile application seamlessly interacted with the REST API, utilizing it as
+                                a
+                                backend service to retrieve and display user information. This approach ensured
+                                a
+                                smooth and secure user experience, allowing individuals to manage and share
+                                their
+                                life achievements with confidence in the integrity and privacy of their
+                                credentials.
+                                <br>
+                                <br>
+                            </p>
+                        </div>
+                        <a href="#knowkee-project">
+                            <button id="knowkeeId" onclick="toggleDropdown('knowkee')" class="cami-btn">
+                                Show Details
+                            </button>
+                        </a>
+                    </div>
                 </div>
                 <div id="smartpass-project" class="glass glass-padding">
                     <h3 class="text-xl font-bold mb-2">SmartPass</h3>
@@ -179,7 +178,8 @@
                                 developer,
                                 a lead developer, and a product owner (CTO). <br>
                                 <br>
-                                <strong>The Problem</strong> <br>The challenge involved designing and implementing a highly
+                                <strong>The Problem</strong> <br>The challenge involved designing and implementing a
+                                highly
                                 modular and scalable microservice dedicated to managing user authentication, which could
                                 be
                                 seamlessly integrated with diverse applications requiring minimal effort. This
@@ -210,8 +210,7 @@
                             </p>
                         </div>
                         <a href="#smartpass-project">
-                            <button id="smartpassId" onclick="toggleDropdown('smartpass')"
-                                class="cami-btn">
+                            <button id="smartpassId" onclick="toggleDropdown('smartpass')" class="cami-btn">
                                 Show Details
                             </button>
                         </a>
@@ -233,7 +232,8 @@
                             backend
                             developer.<br>
                             <br>
-                            <strong>The Tech Stack</strong> <br>This tech stack is centered around Node.js for server-side
+                            <strong>The Tech Stack</strong> <br>This tech stack is centered around Node.js for
+                            server-side
                             logic, emphasizing asynchronous operations and scalability for web applications. AWS Lambda
                             is
                             specifically used for processing data received through SES (Simple Email Service), handling
@@ -296,8 +296,7 @@
                             </p>
                         </div>
                         <a href="#email-etl-project">
-                            <button id="emailId" onclick="toggleDropdown('email')"
-                                class="cami-btn">
+                            <button id="emailId" onclick="toggleDropdown('email')" class="cami-btn">
                                 Show Details
                             </button>
                         </a>
@@ -311,10 +310,12 @@
                     <div class="dropdown inline-block mt-4">
                         <div id="kme-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                             <!-- Add detailed project information here -->
-                            <strong>My Role</strong> <br>Backend. I resolved support tickets and created new features for a
+                            <strong>My Role</strong> <br>Backend. I resolved support tickets and created new features
+                            for a
                             Sass LMS monolithic architected web application.<br>
                             <br>
-                            <strong>The Tech Stack</strong> <br>In this tech stack, Python and Django form the backbone for
+                            <strong>The Tech Stack</strong> <br>In this tech stack, Python and Django form the backbone
+                            for
                             server-side logic and web development, while PostgreSQL is employed as the relational
                             database
                             for efficient data storage. AWS Cloud9 serves as the integrated development environment,
@@ -347,8 +348,7 @@
                             </p>
                         </div>
                         <a href="#kme360-project">
-                            <button id="kmeId" onclick="toggleDropdown('kme')"
-                                class="cami-btn">
+                            <button id="kmeId" onclick="toggleDropdown('kme')" class="cami-btn">
                                 Show Details
                             </button>
                         </a>
