--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 </div>
             </div>
 
-            <section id="projects" class="py-20 grid grid-columns-1">
+@media only screen and (min-width) {
+            <section id="projects" class="py-20 grid grid-columns-1 justify-items-center">
                 <div id="knowkee-project" class="glass glass-padding">
                     <h3 class="text-xl font-bold mb-2">Knowkee (mobile app)</h3>
                     <p class="text-gray-300">
