fix: knowkee line breaks re-distributed

--- a/index.html
+++ b/index.html
@@ -64,24 +64,24 @@
                                 the outside world was managed by Amazon API Gateway, which seamlessly connected
                                 with
                                 AWS
-                                Lambda, facilitating serverless compute functionality. <br><br>Email communication was
+                                Lambda, facilitating serverless compute functionality. Email communication was
                                 streamlined
                                 through AWS Simple Email Service (SES), while Simple Notification Service (SNS)
                                 handled
                                 messaging. <br><br>User authentication and management were delegated to Amazon Cognito.
                                 REST
                                 and
-                                HTTP APIs enabled smooth communication between components. <br><br>The React Native app,
+                                HTTP APIs enabled smooth communication between components. The React Native app,
                                 coded in
                                 Typescript, served as the dynamic and responsive frontend. <br><br> Version control was
                                 managed using
                                 CodeCommit/git, while AWS SAM and CloudFormation simplified serverless
                                 application
-                                deployment. <br><br>JSON Web Tokens (JWT) secured communication, and third-party APIs
+                                deployment. JSON Web Tokens (JWT) secured communication, and third-party APIs
                                 expanded the
                                 system's capabilities, creating a robust, scalable, and versatile technological
-                                ecosystem.<br>
-                                <br>
+                                ecosystem.
+                                <br><br>
                                 <strong>The team</strong><br> For this project the team was conformed by 2 backend
                                 developers,
                                 2 frontend developers, a lead developer, and a product owner (CTO). As well as
