--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body class="matrix-font">
+    <img src="Profile_2023_sq~2.jpg style="visibility: hidden;">
     <div class="content">
         <canvas id="q">
         </canvas>
