facebook meta data

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/custom.css">
+    <meta property="og:url" content="https://www.camilochaves.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Camilo Chaves Backend Developer Portfolio" />
+    <meta property="og:description" content="Here's a glimpse into my backend development work" />
+    <meta property="og:image" content="Profile_2023_sq~2.jpg" />
+
 </head>
 
 <body class="matrix-font">
@@ -81,7 +87,7 @@
                                 deployment. JSON Web Tokens (JWT) secured communication, and third-party APIs
                                 expanded the
                                 system's capabilities, creating a robust, scalable, and versatile technological
-                                ecosystem. 
+                                ecosystem.
                                 <br> <br>
                                 <strong>The team</strong><br> For this project the team was conformed by 2 backend
                                 developers,
