--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Camilo Chaves Backend Developer Portfolio" />
     <meta property="og:description" content="Here's a glimpse into my backend development work" />
-    <meta property="og:image" content="Profile_2023_sq~2.jpg" />
+    <meta property="og:image" content="https://www.camilochaves.com/Profile_2023_sq~2.jpg" />
 
 </head>
 
