--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                         </a>
                     </div>
                     <div class="profile-link p-2">
-                        <a href="mailto:camilo.chaves.h@gmail.com" target="_blank" rel="noopener noreferrer"
+                        <a href="mailto:camilo@camilochaves.com" target="_blank" rel="noopener noreferrer"
                             class="flex items-center no-underline hover:underline">
                             <img src="at.png" alt="Email Icon" class="w-6 h-6 mr-2 text-green-500">
                             <pre>Email Me</pre>
