--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/custom.css">
+    <link rel="stylesheet" href="./highlight/styles/base16/green-screen.min.css">
+    <script src="./highlight/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
     <meta property="og:url" content="https://www.camilochaves.com" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Camilo Chaves Backend Developer Portfolio" />
