--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Camilo Chaves Backend Developer Portfolio</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/custom.css">
     <link rel="stylesheet" href="./highlight/styles/base16/green-screen.min.css">
+    <link rel="stylesheet" href="./styles/custom.css">
     <script src="./highlight/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
     <meta property="og:url" content="https://www.camilochaves.com" />
@@ -143,7 +143,7 @@
                                 <br>
                                 <br>
                             </p>
-                            <div>
+                            <!-- <div>
                                 <pre><code class="language-python">
 import json
 import boto3
@@ -163,7 +163,7 @@ luis_list = to_list(luis.name)
 
 
                                 </code></pre>
-                            </div>
+                            </div> -->
                         </div>
                         <a href="#knowkee-project">
                             <button id="knowkeeId" onclick="toggleDropdown('knowkee')" class="cami-btn">
