--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Camilo Chaves Backend Developer Portfolio" />
     <meta property="og:description" content="Here's a glimpse into my backend development work" />
-    <meta property="og:image" content="https://www.camilochaves.com/Profile_2023_sq~2.jpg" />
+    <meta property="og:image" content="https://www.camilochaves.com/img/Profile_2023_sq~2.jpg" />
 
 </head>
 
@@ -26,7 +26,7 @@
         <div class="min-h-screen flex flex-col items-center justify-center code-rain-animation">
             <div class="main-card-wrapper">
                 <div class="glass main-card">
-                    <img class="profile_picture" src="Profile_2023_sq~2.jpg" width="250px" height="250px">
+                    <img class="profile_picture" src="./img/Profile_2023_sq~2.jpg" width="250px" height="250px">
                     <h1 class="text-5xl font-bold mb-2 text-center">Camilo Chaves</h1>
                     <h2 class="text-lg mb-5 text-center">Backend Web Developer</h2>
                     <div class="text-center space-y-4">
@@ -392,28 +392,28 @@ luis_list = to_list(luis.name)
                     <div class="profile-link p-2">
                         <a href="http://www.linkedin.com/in/camilochavesdeveloper" target="_blank"
                             rel="noopener noreferrer" class="flex items-center no-underline hover:underline">
-                            <img src="LI-In-Bug-green.png" alt="LinkedIn Icon" class="w-6 h-6 mr-2 text-green-500">
+                            <img src="./img/LI-In-Bug-green.png" alt="LinkedIn Icon" class="w-6 h-6 mr-2 text-green-500">
                             <pre>LinkedIn</pre>
                         </a>
                     </div>
                     <div class="profile-link p-2 justify-start">
                         <a href="https://github.com/camichaves79" target="_blank" rel="noopener noreferrer"
                             class="flex items-center no-underline hover:underline">
-                            <img src="github-mark-green.png" alt="GitHub Icon" class="w-6 h-6 mr-2 text-green-500">
+                            <img src="./img/github-mark-green.png" alt="GitHub Icon" class="w-6 h-6 mr-2 text-green-500">
                             <pre>GitHub</pre>
                         </a>
                     </div>
                     <div class="profile-link p-2">
                         <a href="https://x.com/CamiloChavesH79" target="_blank" rel="noopener noreferrer"
                             class="flex items-center no-underline hover:underline">
-                            <img src="X_logo_2023_original.png" alt="Twitter Icon" class="w-6 h-6 mr-2 text-green-500">
+                            <img src="./img/X_logo_2023_original.png" alt="Twitter Icon" class="w-6 h-6 mr-2 text-green-500">
                             <pre>Twitter</pre>
                         </a>
                     </div>
                     <div class="profile-link p-2">
                         <a href="mailto:camilo@camilochaves.com" target="_blank" rel="noopener noreferrer"
                             class="flex items-center no-underline hover:underline">
-                            <img src="at.png" alt="Email Icon" class="w-6 h-6 mr-2 text-green-500">
+                            <img src="./img/at.png" alt="Email Icon" class="w-6 h-6 mr-2 text-green-500">
                             <pre>Email Me</pre>
                         </a>
                     </div>
